# Autonomous-Mission-Operations-Agent-AMOA

./: .env.example  .gitignore  AMOA_CLAUDE_CODE.md  AMOA_PLAN.md  CLAUDE.md  IDEAS_PARKING_LOT.md  Makefile  README.md  REPORT.md  RESULTS.md  environment.yml  pyproject.toml
.claude/: settings.json
docs/: architecture.md
docs/decisions/: 0001-stack-choices.md  0002-provider-strategy.md  0003-data-layer.md  0007-mcp-separation.md
eval/results/: w5_groq_run.txt
notebooks/: eda_output.txt  eda_plots.py  eda_script.py  spacetrack_verify.py
src/amoa/: config.py  graph.py  llm.py  state.py
src/amoa/agents/: health_guard.py  payload_scientist.py  safety_pilot.py  supervisor.py
src/amoa/baselines/: isolation_forest.py
src/amoa/data/: cdm.py  esa_loader.py  sentinel_loader.py  spacetrack_client.py  spacetrack_client_direct.py
src/amoa/eval/: baseline_metrics.json  harness.py  metrics.py
src/amoa/ui/: streamlit_app.py
tests/: test_llm.py  test_safety_pilot.py  test_scenarios.py  test_smoke.py  test_snapshots.py
tests/__snapshots__/: test_snapshots.ambr
tests/fixtures/cdms/: three_scenarios.json
tests/fixtures/scenarios/: clear.json  conflict.json  degraded.json
