[project]
name = "amoa"
version = "0.1.0"
description = "Autonomous Mission Operations Agent — multi-agent satellite mission coordination"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langsmith>=0.1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "spacetrack>=1.4.0",
    "scikit-learn>=1.4",
    "scipy>=1.13",
    "anthropic>=0.40",
    "google-genai>=2.7",
    "groq>=0.11",
    "mcp>=1.0",
    "streamlit>=1.36",
    "sqlmodel>=0.0.22",
    "diskcache>=5.6",
    "numpy>=1.26",
    "pandas>=2.2",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "syrupy>=4.7",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amoa"]
